@startuml

title __RESULTS's Class Diagram__\n

  package com.anniefraz.dissertation.main.results {
    class Result {
        - currentRep : int
        - outputFileString : String
        - time : long
        - compiledClass : Class<?>
        - file : File
        - compileSuccess : boolean
        - passed : boolean
        - opacitorMeasurement1 : double
        - opacitorMeasurement2 : double
        - fitnessScore : double
        - unitTestScore : double
        - Result()
        + getUnitTestScore()
        + getCurrentRep()
        + getPatch()
        + getOutputFileString()
        + getTime()
        + getCompiledClass()
        + getFile()
        + isCompileSuccess()
        + isPassed()
        + getOpacitorMeasurement1()
        + getOpacitorMeasurement2()
        + getFitnessScore()
        {static} + getBuilder()
    }
  }
  

  package com.anniefraz.dissertation.main.results {
    class ResultBuilder {
        - currentRep : int
        - outputFileString : String
        - time : long
        - compiledClass : Class<?>
        - compileSuccess : boolean
        - passed : boolean
        - opacitorMeasurement1 : double
        - opacitorMeasurement2 : double
        - unitTestScore : double
        - fitnessScore : double
        - ResultBuilder()
        + setCurrentRep()
        + setPatch()
        + setOutputFileString()
        + setTime()
        + setCompiledClass()
        + setCompileSuccess()
        + setUnitTestScore()
        + setPassed()
        + setOpacitorMeasurement1()
        + setOpacitorMeasurement2()
        + setFitnessScore()
        + build()
    }
  }
  

  package com.anniefraz.dissertation.main.results {
    class ResultFileWriter {
        {static} - LOG : Logger
        - csvWriter : CSVWriter
        + ResultFileWriter()
        + writeResult()
        + close()
    }
  }
  

  package com.anniefraz.dissertation.main.results {
    interface ResultWriter {
        {abstract} + writeResult()
    }
  }
  

  Result o-- Patch : patch
  Result +-down- ResultBuilder
  ResultBuilder o-- Patch : patch
  ResultFileWriter -up-|> ResultWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
